# precursor-flashcards

./: Cargo.toml  README.md
src/: deck.rs  import.rs  main.rs  storage.rs  ui.rs
