[package]
name = "flashcards"
version = "0.1.0"
authors = ["Tyler Colby"]
edition = "2021"
description = "Flashcard viewer with keyboard navigation"

[dependencies]
xous = "0.9.69"
xous-ipc = "0.10.9"
log = "0.4.14"
log-server = { package = "xous-api-log", version = "0.1.68" }
xous-names = { package = "xous-api-names", version = "0.9.70" }
gam = { path = "../../services/gam" }
pddb = { path = "../../services/pddb" }
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
